# RVM

./: Cargo.toml  LICENSE  README.md
.github/workflows/: main.yml
examples/ko/: .clang-format  .gitignore  Kbuild  Makefile  rvm.c  rvm_module.c
examples/ko/include/: rvm.h
examples/ko/rust/: Cargo.toml  extern.h
examples/ko/rust/src/: error.rs  ffi.rs  lib.rs  logging.rs  rvm.rs
examples/uefi/: Cargo.toml  Makefile  OVMF.fd
examples/uefi/.cargo/: config
examples/uefi/src/: main.rs
rvm_macros/: Cargo.toml
rvm_macros/src/: lib.rs
src/: dummy.rs  ffi.rs  inode.rs  interrupt.rs  lib.rs  memory.rs  packet.rs  trap_map.rs
src/arch/aarch64/: mod.rs
src/arch/riscv/: decode.rs  mod.rs  pseudoinsn.rs  ptx4.rs  runvm.rs  sbi.rs  traps.rs  vcpu.rs  vmtrap.S
src/arch/x86_64/: consts.rs  defines.rs  epage_table.rs  ept.rs  exit_reason.rs  feature.rs  guest.rs  guest_phys_memory_set.rs  mod.rs  msr.rs  structs.rs  timer.rs  utils.rs  vcpu.rs  vmcall.rs  vmcs.rs  vmexit.rs
