[package]
name = "rvm"
version = "0.1.0"
authors = ["equation314 <equation618@gmail.com>", "chenyu <believe.chenyu@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4"
spin = "0.5"
bitflags = "1.2"
bit_field = "0.10"
raw-cpuid = "8.1"
x86 = "0.34"
lazy_static = { version = "1.4", features = ["spin_no_std"] }
bit-set = { version = "0.5", default-features = false }
x86_64 = "0.11"
numeric-enum-macro = "0.2"
